2023-04-26  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/libpoke.h: Prototype for pk_keyword_p.
	* libpoke/libpoke.c (pk_keyword_p): New function.
	* libpoke/Makefile.am: Generate $(srcdir)/pkl-keywords.def.
	* testsuite/poke.libpoke/api.c (test_pk_keyword_p): New test.
	* .gitignore: Add /libpoke/pkl-keywords.def.

2023-04-25  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.std/std-test.pk: Do not use "standard" types.

2023-04-25  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/lib/poke-pk.exp (tap_execute): Pass --no-stdtypes to
	poke.
	* pickles/asn1-ber.pk: Do not use "standard" types.
	* pickles/bmp.pk: Likewise.
	* pickles/color.pk: Likewise.
	* pickles/id3v2.pk: Likewise.
	* pickles/id3v1.pk: Likewise.
	* pickles/ieee754.pk: Likewise.
	* pickles/leb128.pk: Likewise.
	* pickles/mbr.pk: Likewise.
	* pickles/openpgp.pk: Likewise.
	* pickles/jffs2.pk: Likewise.
	* pickles/pdap.pk: Likewise.
	* pickles/pcap.pk: Likewise.
	* pickles/riscv.pk: Likewise.
	* testsuite/poke.pickles/mbr-test.pk: Likewise.
	* testsuite/poke.pickles/uuid-test.pk: Likewise.
	* testsuite/poke.pickles/search-test.pk: Likewise.

2023-04-25  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/poke.c (initialize): Use pk_compiler_new_with_flags.
	(NO_STDTYPES_ARG): Define.
	(parse_args_1): Handle NO_STDTYPES_ARG.
	(parse_args_2): Likewise.
	* poke/pk-hserver.pk: Do not use standard types.
	* poke/pk-settings.pk: Likewise.
	* poke/pk-dump.pk: Likewise.
	* poke/pk-copy.pk: Likewise.
	* poke/pk-save.pk: Likewise.
	* poke/pk-scrabble.pk: Likewise.
	* poke/pk-diff.pk: Likewise.
	* pickles/diff.pk: Likewise.

2023-04-24  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/bpf.pk: Do not use "standard" types.
	* pickles/btf.pk: Likewise.
	* pickles/sframe.pk: Likewise.
	* pickles/time.pk: Likewise.
	* pickles/coff.pk: Likewise.
	* pickles/pe.pk: Likewise.
	* pickles/ustar.pk: Likewise.
	* pickles/pktest.pk: Likewise.
	* pickles/redoxfs.pk: Likewise.
	* pickles/ios.pk: Likewise.